--- a/ground/gcs/src/plugins/uavobjectbrowser/uavobjectbrowser.ui
+++ b/ground/gcs/src/plugins/uavobjectbrowser/uavobjectbrowser.ui
@@ -219,6 +219,9 @@
      </item>
     </layout>
    </item>
+   <item>
+    <widget class="QTreeView" name="treeView"/>
+   </item>
   </layout>
  </widget>
  <resources>
