--- a/ground/gcs/src/plugins/boards_stm/stm.qrc
+++ b/ground/gcs/src/plugins/boards_stm/stm.qrc
@@ -1,5 +1,6 @@
 <RCC>
     <qresource prefix="/stm">
         <file>images/flyingf3.png</file>
+        <file>images/vrbrain.png</file>
     </qresource>
 </RCC>
