gcs plugin boards_openpilot: fixed resource definition

--- a/ground/gcs/src/plugins/boards_openpilot/openpilot.qrc
+++ b/ground/gcs/src/plugins/boards_openpilot/openpilot.qrc
@@ -3,5 +3,6 @@
         <file>images/cc.png</file>
         <file>images/cc3d.png</file>
         <file>images/pipx.svg</file>
+        <file>images/connection-diagrams.svg</file>
     </qresource>
 </RCC>
