gcs plugin boards_quantec: fixed resource definition

--- a/ground/gcs/src/plugins/boards_quantec/quantec.qrc
+++ b/ground/gcs/src/plugins/boards_quantec/quantec.qrc
@@ -1,5 +1,5 @@
 <RCC>
-    <qresource prefix="/qauntec">
+    <qresource prefix="/quantec">
         <file>images/quanton.png</file>
     </qresource>
 </RCC>
