--- a/ground/gcs/src/plugins/config/input.ui
+++ b/ground/gcs/src/plugins/config/input.ui
@@ -157,6 +157,13 @@
                    </layout>
                   </item>
                   <item>
+                   <widget class="QCheckBox" name="cb_liveView">
+                    <property name="text">
+                     <string>Turn on live view</string>
+                    </property>
+                   </widget>
+                  </item>
+                  <item>
                    <spacer name="verticalSpacer_3">
                     <property name="orientation">
                      <enum>Qt::Vertical</enum>
