--- a/ground/gcs/src/plugins/config/airframe.ui
+++ b/ground/gcs/src/plugins/config/airframe.ui
@@ -670,7 +670,7 @@ margin:1px;</string>
                      </widget>
                     </item>
                     <item row="0" column="1">
-                     <widget class="QPushButton" name="bnLevelTrim">
+                     <widget class="QPushButton" name="bnLevelTrim_FW">
                       <property name="text">
                        <string>Set level angle</string>
                       </property>
@@ -690,9 +690,8 @@ margin:1px;</string>
                      </spacer>
                     </item>
                    </layout>
-                   <zorder>horizontalSpacer_14</zorder>
                    <zorder>bnServoTrim</zorder>
-                   <zorder>bnLevelTrim</zorder>
+                   <zorder>bnLevelTrim_FW</zorder>
                    <zorder>horizontalSpacer_14</zorder>
                   </widget>
                  </item>
@@ -3280,6 +3279,41 @@ p, li { white-space: pre-wrap; }
        </item>
       </layout>
      </widget>
+    </widget>
+   </item>
+   <item>
+    <widget class="QGroupBox" name="groupBox_14">
+     <property name="minimumSize">
+      <size>
+       <width>0</width>
+       <height>60</height>
+      </size>
+     </property>
+     <property name="title">
+      <string>Airframe trimming</string>
+     </property>
+     <layout class="QGridLayout" name="gridLayout_11">
+      <item row="0" column="1">
+       <spacer name="horizontalSpacer_16">
+        <property name="orientation">
+         <enum>Qt::Horizontal</enum>
+        </property>
+        <property name="sizeHint" stdset="0">
+         <size>
+          <width>40</width>
+          <height>20</height>
+         </size>
+        </property>
+       </spacer>
+      </item>
+      <item row="0" column="0">
+       <widget class="QPushButton" name="bnLevelTrim_MR">
+        <property name="text">
+         <string>Set level angle</string>
+        </property>
+       </widget>
+      </item>
+     </layout>
     </widget>
    </item>
    <item>
