--- a/ground/gcs/src/plugins/config/airframe.ui
+++ b/ground/gcs/src/plugins/config/airframe.ui
@@ -651,51 +651,6 @@ margin:1px;</string>
                   </layout>
                  </item>
                  <item>
-                  <widget class="QGroupBox" name="groupBox_11">
-                   <property name="minimumSize">
-                    <size>
-                     <width>0</width>
-                     <height>60</height>
-                    </size>
-                   </property>
-                   <property name="title">
-                    <string>Airframe trimming</string>
-                   </property>
-                   <layout class="QGridLayout" name="gridLayout_10">
-                    <item row="0" column="0">
-                     <widget class="QPushButton" name="bnServoTrim">
-                      <property name="text">
-                       <string>Trim servos</string>
-                      </property>
-                     </widget>
-                    </item>
-                    <item row="0" column="1">
-                     <widget class="QPushButton" name="bnLevelTrim_FW">
-                      <property name="text">
-                       <string>Set level angle</string>
-                      </property>
-                     </widget>
-                    </item>
-                    <item row="0" column="2">
-                     <spacer name="horizontalSpacer_14">
-                      <property name="orientation">
-                       <enum>Qt::Horizontal</enum>
-                      </property>
-                      <property name="sizeHint" stdset="0">
-                       <size>
-                        <width>40</width>
-                        <height>20</height>
-                       </size>
-                      </property>
-                     </spacer>
-                    </item>
-                   </layout>
-                   <zorder>bnServoTrim</zorder>
-                   <zorder>bnLevelTrim_FW</zorder>
-                   <zorder>horizontalSpacer_14</zorder>
-                  </widget>
-                 </item>
-                 <item>
                   <spacer name="verticalSpacer">
                    <property name="orientation">
                     <enum>Qt::Vertical</enum>
@@ -3292,8 +3247,25 @@ p, li { white-space: pre-wrap; }
      <property name="title">
       <string>Airframe trimming</string>
      </property>
-     <layout class="QGridLayout" name="gridLayout_11">
-      <item row="0" column="1">
+     <layout class="QHBoxLayout" name="horizontalLayout_11">
+      <item>
+       <widget class="QPushButton" name="bnLevelTrim">
+        <property name="text">
+         <string>Set level angle</string>
+        </property>
+       </widget>
+      </item>
+      <item>
+       <widget class="QPushButton" name="bnServoTrim">
+        <property name="enabled">
+         <bool>false</bool>
+        </property>
+        <property name="text">
+         <string>Trim servos</string>
+        </property>
+       </widget>
+      </item>
+      <item>
        <spacer name="horizontalSpacer_16">
         <property name="orientation">
          <enum>Qt::Horizontal</enum>
@@ -3305,13 +3277,6 @@ p, li { white-space: pre-wrap; }
          </size>
         </property>
        </spacer>
-      </item>
-      <item row="0" column="0">
-       <widget class="QPushButton" name="bnLevelTrim_MR">
-        <property name="text">
-         <string>Set level angle</string>
-        </property>
-       </widget>
       </item>
      </layout>
     </widget>
