--- a/androidgcs/res/layout-w600dp/tuning.xml
+++ b/androidgcs/res/layout-w600dp/tuning.xml
@@ -1,135 +1,151 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.v4.widget.DrawerLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:setting_attributes="http://schemas.android.com/apk/res/org.taulabs.androidgcs"
+    android:id="@+id/drawer_layout"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:orientation="vertical" >
-
-    <Button
-        android:id="@+id/saveBtn"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
-        android:layout_alignParentRight="true"
-        android:text="@string/save" />
-
-    <Button
-        android:id="@+id/applyBtn"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
-        android:layout_toLeftOf="@+id/saveBtn"
-        android:text="@string/apply" />
-
-	<Button
-	    android:id="@+id/loadBtn"
-	    android:layout_width="wrap_content"
-	    android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
-        android:layout_toLeftOf="@+id/applyBtn"
-	    android:text="@string/load" />
+    android:layout_height="match_parent">
     
-    <LinearLayout
-        android:id="@+id/linearLayout3"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentTop="true" >
-
-        <org.taulabs.androidgcs.views.ScrollBarView
-            android:id="@+id/rollRateKp"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_weight="0.5"
-            setting_attributes:max_value="0.01"
-            setting_attributes:setting_name="Roll Rate Kp" >
-        </org.taulabs.androidgcs.views.ScrollBarView>
-
-        <org.taulabs.androidgcs.views.ScrollBarView
-            android:id="@+id/pitchRateKp"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_weight="0.5"
-            setting_attributes:max_value="0.01"
-            setting_attributes:setting_name="Pitch Rate Kp" >
-        </org.taulabs.androidgcs.views.ScrollBarView>
-
-    </LinearLayout>
-
-    <LinearLayout
-        android:id="@+id/linearLayout1"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_alignParentLeft="true"
-        android:layout_below="@+id/linearLayout3" >
-
-        <org.taulabs.androidgcs.views.ScrollBarView
-            android:id="@+id/rollRateKi"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_weight="0.5"
-            setting_attributes:max_value="0.05"
-            setting_attributes:setting_name="Roll Rate Ki" >
-        </org.taulabs.androidgcs.views.ScrollBarView>
-
-        <org.taulabs.androidgcs.views.ScrollBarView
-            android:id="@+id/pitchRateKi"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_weight="0.5"
-            setting_attributes:max_value="0.05"
-            setting_attributes:setting_name="Pitch Rate Ki" >
-        </org.taulabs.androidgcs.views.ScrollBarView>
-    </LinearLayout>
-
-    <LinearLayout
-        android:id="@+id/linearLayout2"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_alignParentLeft="true"
-        android:layout_below="@+id/linearLayout1" >
-
-        <org.taulabs.androidgcs.views.ScrollBarView
-            android:id="@+id/rollKp"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_weight="0.5"
-            setting_attributes:max_value="5"
-            setting_attributes:setting_name="Roll Kp" >
-        </org.taulabs.androidgcs.views.ScrollBarView>
-
-        <org.taulabs.androidgcs.views.ScrollBarView
-            android:id="@+id/pitchKp"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_weight="0.5"
-            setting_attributes:max_value="5"
-            setting_attributes:setting_name="Pitch Kp" >
-        </org.taulabs.androidgcs.views.ScrollBarView>
-    </LinearLayout>
-
-    <LinearLayout
-        android:id="@+id/linearLayout4"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_alignParentLeft="true"
-        android:layout_below="@+id/linearLayout2" >
-        
-        <org.taulabs.androidgcs.views.ScrollBarView
-            android:id="@+id/rollRateKd"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_weight="0.5"
-            setting_attributes:max_value="0.001"
-            setting_attributes:setting_name="Roll Rate Kd" />
-
-        <org.taulabs.androidgcs.views.ScrollBarView
-            android:id="@+id/pitchRateKd"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_weight="0.5"
-            setting_attributes:max_value="0.001"
-            setting_attributes:setting_name="Pitch Rate Kd" />
-	</LinearLayout>
-    
-</RelativeLayout>
+    <RelativeLayout
+	    android:layout_width="match_parent"
+	    android:layout_height="match_parent"
+	    android:orientation="vertical" >
+	
+	    <Button
+	        android:id="@+id/saveBtn"
+	        android:layout_width="wrap_content"
+	        android:layout_height="wrap_content"
+	        android:layout_alignParentBottom="true"
+	        android:layout_alignParentRight="true"
+	        android:text="@string/save" />
+	
+	    <Button
+	        android:id="@+id/applyBtn"
+	        android:layout_width="wrap_content"
+	        android:layout_height="wrap_content"
+	        android:layout_alignParentBottom="true"
+	        android:layout_toLeftOf="@+id/saveBtn"
+	        android:text="@string/apply" />
+	
+		<Button
+		    android:id="@+id/loadBtn"
+		    android:layout_width="wrap_content"
+		    android:layout_height="wrap_content"
+	        android:layout_alignParentBottom="true"
+	        android:layout_toLeftOf="@+id/applyBtn"
+		    android:text="@string/load" />
+	    
+	    <LinearLayout
+	        android:id="@+id/linearLayout3"
+	        android:layout_width="match_parent"
+	        android:layout_height="wrap_content"
+	        android:layout_alignParentLeft="true"
+	        android:layout_alignParentTop="true" >
+	
+	        <org.taulabs.androidgcs.views.ScrollBarView
+	            android:id="@+id/rollRateKp"
+	            android:layout_width="wrap_content"
+	            android:layout_height="wrap_content"
+	            android:layout_weight="0.5"
+	            setting_attributes:max_value="0.01"
+	            setting_attributes:setting_name="Roll Rate Kp" >
+	        </org.taulabs.androidgcs.views.ScrollBarView>
+	
+	        <org.taulabs.androidgcs.views.ScrollBarView
+	            android:id="@+id/pitchRateKp"
+	            android:layout_width="wrap_content"
+	            android:layout_height="wrap_content"
+	            android:layout_weight="0.5"
+	            setting_attributes:max_value="0.01"
+	            setting_attributes:setting_name="Pitch Rate Kp" >
+	        </org.taulabs.androidgcs.views.ScrollBarView>
+	
+	    </LinearLayout>
+	
+	    <LinearLayout
+	        android:id="@+id/linearLayout1"
+	        android:layout_width="match_parent"
+	        android:layout_height="wrap_content"
+	        android:layout_alignParentLeft="true"
+	        android:layout_below="@+id/linearLayout3" >
+	
+	        <org.taulabs.androidgcs.views.ScrollBarView
+	            android:id="@+id/rollRateKi"
+	            android:layout_width="wrap_content"
+	            android:layout_height="wrap_content"
+	            android:layout_weight="0.5"
+	            setting_attributes:max_value="0.05"
+	            setting_attributes:setting_name="Roll Rate Ki" >
+	        </org.taulabs.androidgcs.views.ScrollBarView>
+	
+	        <org.taulabs.androidgcs.views.ScrollBarView
+	            android:id="@+id/pitchRateKi"
+	            android:layout_width="wrap_content"
+	            android:layout_height="wrap_content"
+	            android:layout_weight="0.5"
+	            setting_attributes:max_value="0.05"
+	            setting_attributes:setting_name="Pitch Rate Ki" >
+	        </org.taulabs.androidgcs.views.ScrollBarView>
+	    </LinearLayout>
+	
+	    <LinearLayout
+	        android:id="@+id/linearLayout2"
+	        android:layout_width="match_parent"
+	        android:layout_height="wrap_content"
+	        android:layout_alignParentLeft="true"
+	        android:layout_below="@+id/linearLayout1" >
+	
+	        <org.taulabs.androidgcs.views.ScrollBarView
+	            android:id="@+id/rollKp"
+	            android:layout_width="wrap_content"
+	            android:layout_height="wrap_content"
+	            android:layout_weight="0.5"
+	            setting_attributes:max_value="5"
+	            setting_attributes:setting_name="Roll Kp" >
+	        </org.taulabs.androidgcs.views.ScrollBarView>
+	
+	        <org.taulabs.androidgcs.views.ScrollBarView
+	            android:id="@+id/pitchKp"
+	            android:layout_width="wrap_content"
+	            android:layout_height="wrap_content"
+	            android:layout_weight="0.5"
+	            setting_attributes:max_value="5"
+	            setting_attributes:setting_name="Pitch Kp" >
+	        </org.taulabs.androidgcs.views.ScrollBarView>
+	    </LinearLayout>
+	
+	    <LinearLayout
+	        android:id="@+id/linearLayout4"
+	        android:layout_width="match_parent"
+	        android:layout_height="wrap_content"
+	        android:layout_alignParentLeft="true"
+	        android:layout_below="@+id/linearLayout2" >
+	        
+	        <org.taulabs.androidgcs.views.ScrollBarView
+	            android:id="@+id/rollRateKd"
+	            android:layout_width="wrap_content"
+	            android:layout_height="wrap_content"
+	            android:layout_weight="0.5"
+	            setting_attributes:max_value="0.001"
+	            setting_attributes:setting_name="Roll Rate Kd" />
+	
+	        <org.taulabs.androidgcs.views.ScrollBarView
+	            android:id="@+id/pitchRateKd"
+	            android:layout_width="wrap_content"
+	            android:layout_height="wrap_content"
+	            android:layout_weight="0.5"
+	            setting_attributes:max_value="0.001"
+	            setting_attributes:setting_name="Pitch Rate Kd" />
+		</LinearLayout>
+	    
+	</RelativeLayout>
+    <!-- The navigation drawer -->
+    <ListView android:id="@+id/left_drawer"
+        android:layout_width="240dp"
+        android:layout_height="match_parent"
+        android:layout_gravity="start"
+        android:choiceMode="singleChoice"
+        android:divider="@android:color/transparent"
+        android:dividerHeight="0dp"
+        android:background="#111"/>
+</android.support.v4.widget.DrawerLayout>
