Android: move ObjectEditView to view package

--- a/androidgcs/res/layout/object_editor.xml
+++ b/androidgcs/res/layout/object_editor.xml
@@ -46,11 +46,11 @@
 	    android:layout_height="wrap_content"
 	    android:layout_weight="1.56" >
 
-	    <org.taulabs.androidgcs.ObjectEditView
+	    <org.taulabs.androidgcs.views.ObjectEditView
 	        android:id="@+id/object_edit_view"
 	        android:layout_width="wrap_content"
 	        android:layout_height="wrap_content" >
-	    </org.taulabs.androidgcs.ObjectEditView>
+	    </org.taulabs.androidgcs.views.ObjectEditView>
 	</ScrollView>
     
 </LinearLayout>
